chore: fix issues on small screen

--- a/src/page-components/collections/framework-field-guide-fundamentals/components/collection-table-of-contents-fundamentals.module.scss
+++ b/src/page-components/collections/framework-field-guide-fundamentals/components/collection-table-of-contents-fundamentals.module.scss
@@ -34,6 +34,10 @@
 	color: var(--on-dark-emphasis-high);
 }
 
+.postTitle {
+	text-align: left;
+}
+
 .listItem {
 	border-radius: var(--corner-radius-circular);
 	display: flex;
@@ -68,17 +72,20 @@
 	width: var(--spc-num);
 	text-align: right;
 	margin: 0;
+	flex-shrink: 0;
 }
 
 .numberDot {
 	width: var(--spc-dot);
 	text-align: left;
 	margin: 0;
+	flex-shrink: 0;
 }
 
 .noOutlineButton {
 	margin-left: auto;
 	border: none !important;
+	flex-shrink: 0;
 }
 
 .buttonContainer {
