--- a/src/page-components/collections/framework-field-guide-fundamentals/segments/hero-fundamentals.module.scss
+++ b/src/page-components/collections/framework-field-guide-fundamentals/segments/hero-fundamentals.module.scss
@@ -89,6 +89,7 @@ body {
 	transform: translateX(-50%) translateY(50%);
 	background: var(--fund-200);
 	padding: 0 var(--outline-gap);
+	white-space: nowrap;
 }
 
 .readNowContainer {
